--- a/index.html
+++ b/index.html
@@ -9,7 +9,27 @@
 </head>
 
 <body>
-    <h1>Tour guide website</h1>
+    <header>
+        <nav>
+            <div class="logo-section">
+                <img src="Images/Group 40071 (2).png" alt="">
+                <h1 class="logo-title">Tour Guide</h1>
+            </div>
+            <div class="nav-items">
+                <a href="">Home</a>
+                <a href="">Packages</a>
+                <a href="">Testimonial</a>
+                <a href="">Blog</a>
+                <a href="">Contacts</a>
+            </div>
+        </nav>
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 
 </html>
