popular tour section complete

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav>
             <div class="logo-section">
                 <img src="Images/Group 40071 (2).png" alt="">
-                <h1 class="logo-title">Tour Guide</h1>
+                <h1 class="logo-title">Tour <span>Guide</span></h1>
             </div>
             <div class="nav-items">
                 <a href="">Home</a>
@@ -23,9 +23,50 @@
                 <a href="">Contacts</a>
             </div>
         </nav>
+        <div class="banner-section">
+            <div class="banner-content">
+                <h1 class="banner-title">explore your travel</h1>
+                <p class="banner-paragraph">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
+                    adipiscing.
+                    In et
+                    odio enim ac quis sapien urna eu phasellus.</p>
+                <div class="banner-inputs">
+                    <label for="">
+                        <input type="text" placeholder="Where go">
+                    </label>
+                    <label for="">
+                        <input type="text" placeholder="When">
+                    </label>
+                    <label for="">
+                        <input type="text" placeholder="Select type">
+                    </label>
+                    <input class="btn" type="button" value="Find now">
+                </div>
+            </div>
+        </div>
     </header>
     <main>
-
+        <div class="popular-tour-section">
+            <div class="popular-content">
+                <h1 class="heading">our popular tours</h1>
+                <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst nec nibh pellentesque.</p>
+                <ul>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                        erat at .</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                </ul>
+                <p class="paragraph">
+                    Amet consectetur. Vulputate commodo felis molestie risus
+                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
+                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.
+                </p>
+                <button class="btn">Read More</button>
+            </div>
+            <img src="Images/Rectangle 4.png" alt="">
+        </div>
     </main>
     <footer>
 
