--- a/index.html
+++ b/index.html
@@ -67,6 +67,36 @@
             </div>
             <img src="Images/Rectangle 4.png" alt="">
         </div>
+        <div class="choosing-section">
+            <div class="choose-content">
+                <h1 class="heading">why choose us</h1>
+                <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
+                    Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+            <div class="choose-cards">
+                <div class="card">
+                    <img src="Images/hotel 1.png" alt="">
+                    <h3 class="card-title">handipack hotel</h3>
+                    <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                        Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                    </p>
+                </div>
+                <div class="card map-bg">
+                    <img src="Images/map 1.png" alt="">
+                    <h3 class="card-title">handipack hotel</h3>
+                    <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                        Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                    </p>
+                </div>
+            </div>
+            <div class="card last-card">
+                <img src="Images/price-tag 1.png" alt="">
+                <h3 class="card-title">handipack hotel</h3>
+                <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                    Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                </p>
+            </div>
+        </div>
     </main>
     <footer>
 
