--- a/index.html
+++ b/index.html
@@ -99,7 +99,20 @@
         </div>
     </main>
     <footer>
-
+        <div class="footer-heading">
+            <img src="Images/Group 40071 (2).png" alt="">
+            <h1 class="logo-title">Tour <span>Guide</span></h1>
+        </div>
+        <p class="paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti
+            vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <div class="f-icons">
+            <img src="Images/twitter.png" alt="">
+            <img src="Images/fb.png" alt="">
+            <img src="Images/insta.png" alt="">
+            <img src="Images/github.png" alt="">
+        </div>
+        <hr>
+        <p class="paragraph">2024 &copy; All Right Reserved </p>
     </footer>
 </body>
 
