newsletter section complete

--- a/index.html
+++ b/index.html
@@ -97,6 +97,29 @@
                 </p>
             </div>
         </div>
+
+        <div class="newsletter-section">
+            <div class="form">
+                <form action="">
+                    <h1 class="heading">Newsletter</h1>
+                    <p class="paragraph">Get your daily dose of travel news & tips. Sign up today!</p>
+                    <hr class="form-hr">
+                    <div class="form-inputs">
+                        <input type="text" placeholder="Your Name">
+                        <input type="text" placeholder="Your Email">
+                        <button class="btn subscribe">Subscribe</button>
+                    </div>
+                </form>
+            </div>
+            <div class="news-img">
+                <img src="Images/Rectangle 8 (1).png" alt="">
+                <div class="discount-card">
+                    <h3>Tourguide.com</h3>
+                    <h1>Save Up To 60%</h1>
+                </div>
+            </div>
+
+        </div>
     </main>
     <footer>
         <div class="footer-heading">
