destination section complete

--- a/index.html
+++ b/index.html
@@ -67,6 +67,51 @@
             </div>
             <img src="Images/Rectangle 4.png" alt="">
         </div>
+        <div class="destination-section">
+            <div class="choose-content">
+                <h1 class="heading">choose your destination</h1>
+                <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
+                    massa.<br>
+                    Sodales dictumst nec nibh pellentesque.</p>
+            </div>
+
+            <div class="destination-images">
+                <div class="first-row">
+                    <div class="cntr-img-text">
+                        <h2>Maldives</h2>
+                        <img src="Images/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="cntr-img-text">
+                        <h2>Indonesia</h2>
+                        <img src="Images/Rectangle 8.png" alt="">
+                    </div>
+                </div>
+                <div class="second-row">
+                    <div class="cntr-img-text">
+                        <h2>Srilanka</h2>
+                        <img src="Images/Rectangle 6.png" alt="">
+                    </div>
+                    <div class="cntr-img-text">
+                        <h2>North America</h2>
+                        <img src="Images/Rectangle 7.png" alt="">
+                    </div>
+                    <div class="cntr-img-text">
+                        <h2>Kashmir</h2>
+                        <img src="Images/Rectangle 9.png" alt="">
+                    </div>
+                </div>
+                <div class="third-row">
+                    <div class="cntr-img-text">
+                        <h2>Banglades</h2>
+                        <img src="Images/Rectangle 11.png" alt="">
+                    </div>
+                    <div class="cntr-img-text">
+                        <h2>Bandarban</h2>
+                        <img src="Images/Rectangle 10.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
         <div class="choosing-section">
             <div class="choose-content">
                 <h1 class="heading">why choose us</h1>
@@ -96,6 +141,22 @@
                     Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
                 </p>
             </div>
+        </div>
+
+        <div class="popular-tour-section">
+            <div class="popular-content">
+                <h1 class="heading">A Simple Perfect Place <br> To Get Lost</h1>
+                <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
+                    Libero commodo sagittis dignissim adipiscing quis. </p>
+                <ul>
+                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
+                        erat at .</li>
+                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
+                        suspendisse nullam.</li>
+                </ul>
+                <button class="btn">Read More</button>
+            </div>
+            <video controls autoplay src="video/waterfall.mp4"></video>
         </div>
 
         <div class="newsletter-section">
