--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header class="none">
-        <nav>
+    <header class="">
+        <nav class="">
             <div class="logo-section">
                 <img src="Images/Group 40071 (2).png" alt="">
                 <h1 class="logo-title">Tour <span>Guide</span></h1>
@@ -22,6 +22,7 @@
                 <a href="">Blog</a>
                 <a href="">Contacts</a>
             </div>
+            <a class="hamburger" href=""><i class="fa-solid fa-bars"></i></a>
         </nav>
         <div class="banner-section">
             <div class="banner-content">
@@ -39,15 +40,15 @@
                     <select name="" id="">
                         <option value="">Select Type</option>
                     </select>
-                    <button class="btn">
+                    <button class="btn search-btn">
                         <i class="fa-solid fa-magnifying-glass"></i>
                         Find Now</button>
                 </div>
             </div>
         </div>
     </header>
-    <main>
-        <div class="popular-tour-section none">
+    <main class="">
+        <div class="popular-tour-section ">
             <div class="popular-content">
                 <h1 class="heading">our popular tours</h1>
                 <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
@@ -68,7 +69,7 @@
             </div>
             <img src="Images/Rectangle 4.png" alt="">
         </div>
-        <div class="destination-section none">
+        <div class="destination-section ">
             <div class="choose-content">
                 <h1 class="heading">choose your destination</h1>
                 <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
@@ -113,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <div class="choosing-section none">
+        <div class="choosing-section">
             <div class="choose-content">
                 <h1 class="heading">why choose us</h1>
                 <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
@@ -144,7 +145,7 @@
             </div>
         </div>
 
-        <div class="popular-tour-section none">
+        <div class="popular-tour-section">
             <div class="popular-content">
                 <h1 class="heading">A Simple Perfect Place <br> To Get Lost</h1>
                 <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
@@ -160,7 +161,7 @@
             <video controls autoplay src="video/waterfall.mp4"></video>
         </div>
 
-        <div class="newsletter-section none">
+        <div class="newsletter-section">
             <div class="form">
                 <form action="">
                     <h1 class="heading">Newsletter</h1>
