discount banner section complete

--- a/index.html
+++ b/index.html
@@ -145,6 +145,81 @@
             </div>
         </div>
 
+        <div class="discount-sections">
+            <div class="discount-section-one">
+                <div class="discount-banner">
+                    <div class="top-tags">
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-clock"></i>
+                            7 Day / 6 Night
+                        </p>
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-user-group"></i>
+                            Max: 10
+                        </p>
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-location-dot"></i>
+                            Malaysia
+                        </p>
+                    </div>
+                    <h2 class="heading">Tour To Santorini</h2>
+                    <p class="paragraph">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h3 class="price">Price : $1300-$1500</h3>
+                    <button class="btn">Book Now</button>
+                </div>
+            </div>
+            <div class="discount-section-two">
+                <div class="discount-banner-two">
+                    <div class="top-tags">
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-clock"></i>
+                            7 Day / 6 Night
+                        </p>
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-user-group"></i>
+                            Max: 10
+                        </p>
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-location-dot"></i>
+                            Malaysia
+                        </p>
+                    </div>
+                    <h2 class="heading">Tour To Santorini</h2>
+                    <p class="paragraph">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h3 class="price">Price : $1300-$1500</h3>
+                    <button class="btn">Book Now</button>
+                </div>
+            </div>
+            <div class="discount-section-one">
+                <div class="discount-banner">
+                    <div class="top-tags">
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-clock"></i>
+                            7 Day / 6 Night
+                        </p>
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-user-group"></i>
+                            Max: 10
+                        </p>
+                        <p class="paragraph">
+                            <i class="fa-solid icons fa-location-dot"></i>
+                            Malaysia
+                        </p>
+                    </div>
+                    <h2 class="heading">Tour To Santorini</h2>
+                    <p class="paragraph">Amet consectetur. Vulputate commodo felis
+                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
+                        adipiscing.</p>
+                    <h3 class="price">Price : $1300-$1500</h3>
+                    <button class="btn">Book Now</button>
+                </div>
+            </div>
+        </div>
+
         <div class="popular-tour-section">
             <div class="popular-content">
                 <h1 class="heading">A Simple Perfect Place <br> To Get Lost</h1>
