--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 
 <body>
-    <header class="">
-        <nav class="">
+    <header>
+        <nav>
             <div class="logo-section">
                 <img src="Images/Group 40071 (2).png" alt="">
                 <h1 class="logo-title">Tour <span>Guide</span></h1>
@@ -27,10 +27,8 @@
         <div class="banner-section">
             <div class="banner-content">
                 <h1 class="banner-title">explore your travel</h1>
-                <p class="banner-paragraph">Dolor sit amet consectetur. Nullam suspendisse vitae ultricies dolor
-                    adipiscing.
-                    In et
-                    odio enim ac quis sapien urna eu phasellus.</p>
+                <p class="banner-paragraph">Traveling is the best solution of depression. travel more and more enjoy the
+                    beauty of the world</p>
                 <div class="banner-inputs">
                     <input type="text" placeholder="Where go">
                     <select name="" id="">
@@ -48,33 +46,32 @@
         </div>
     </header>
     <main class="">
-        <div class="popular-tour-section">
+        <div class="popular-tour-section ">
             <div class="popular-content">
                 <h1 class="heading">our popular tours</h1>
-                <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                    Sodales dictumst nec nibh pellentesque.</p>
+                <p class="paragraph">we provide the best traveling experience. we have many Packages, some of them are
+                    very popular to our customers.there are some of them recomended for your next tour</p>
                 <ul>
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
-                        erat at .</li>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
-                        suspendisse nullam.</li>
-                    <li> Accumsan eget et turpis praesent lorem egestas enim elit bibendum. Risus at in.</li>
+                    <li>we provide the best traveling experience. we have many Packages, some of them are
+                        very popular to our customers.</li>
+                    <li>we provide the best traveling experience. we have many Packages, some of them are
+                        very popular to our customers.</li>
+                    <li> we provide the best traveling experience. we have many Packages, some of them are
+                        very popular to our customers.</li>
                 </ul>
                 <p class="paragraph">
-                    Amet consectetur. Vulputate commodo felis molestie risus
-                    ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus
-                    natoque aliquet. Id bibendum nunc senectus semper tincidunt.
+                    we provide the best traveling experience. we have many Packages, some of them are
+                    very popular to our customers.
                 </p>
                 <button class="btn">Read More</button>
             </div>
             <img src="Images/Rectangle 4.png" alt="">
         </div>
-        <div class="destination-section">
+        <div class="destination-section ">
             <div class="choose-content">
                 <h1 class="heading">choose your destination</h1>
-                <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit
-                    massa.<br>
-                    Sodales dictumst nec nibh pellentesque.</p>
+                <p class="paragraph">choose your destination from here for your next vacation
+                    enjoy your vacation <br> with the best traveling experience</p>
             </div>
 
             <div class="destination-images">
@@ -114,38 +111,38 @@
                 </div>
             </div>
         </div>
-        <div class="choosing-section">
+        <div class="choosing-section ">
             <div class="choose-content">
                 <h1 class="heading">why choose us</h1>
-                <p class="paragraph">Dolor sit amet consectetur. Diam volutpat neque habitasse pharetra odio sit massa.
-                    Sodales dictumst nec nibh pellentesque.</p>
+                <p class="paragraph">you must choose us because we provide best service with the best price. your
+                    Package will be value for money </p>
             </div>
             <div class="choose-cards">
                 <div class="card">
                     <img src="Images/hotel 1.png" alt="">
                     <h3 class="card-title">handipack hotel</h3>
-                    <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
-                        Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                    <p class="paragraph">stay safe and healthy in world class hotel. you can get an awesome view from
+                        your room. so why doing late?
                     </p>
                 </div>
                 <div class="card map-bg">
                     <img src="Images/map 1.png" alt="">
-                    <h3 class="card-title">handipack hotel</h3>
-                    <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
-                        Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                    <h3 class="card-title">world class service</h3>
+                    <p class="paragraph">we are everywhere in the word. you can book anywhere with us.your safety is our
+                        first priority. so you don't need to tension
                     </p>
                 </div>
             </div>
             <div class="card last-card">
                 <img src="Images/price-tag 1.png" alt="">
-                <h3 class="card-title">handipack hotel</h3>
-                <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
-                    Libero commodo sagittis dignissim adipiscing quis. Habitant adipiscing risus natoque aliquet.
+                <h3 class="card-title">best price guarantee</h3>
+                <p class="paragraph">best price best service. we guarnatee it thet you must be satisfied with our
+                    service. if you have any special instruction feel free to reached us
                 </p>
             </div>
         </div>
 
-        <div class="discount-sections">
+        <div class="discount-sections ">
             <div class="discount-section-one">
                 <div class="discount-banner">
                     <div class="top-tags">
@@ -163,9 +160,9 @@
                         </p>
                     </div>
                     <h2 class="heading">Tour To Santorini</h2>
-                    <p class="paragraph">Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.</p>
+                    <p class="paragraph">Santorini is a beautiful and iconic Greek island located in the southern Aegean
+                        Sea. It is part of the Cyclades archipelago and is known for its stunning landscapes, unique
+                        architecture, and rich history.</p>
                     <h3 class="price">Price : $1300-$1500</h3>
                     <button class="btn">Book Now</button>
                 </div>
@@ -187,9 +184,9 @@
                         </p>
                     </div>
                     <h2 class="heading">Tour To Santorini</h2>
-                    <p class="paragraph">Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.</p>
+                    <p class="paragraph">Santorini is a beautiful and iconic Greek island located in the southern Aegean
+                        Sea. It is part of the Cyclades archipelago and is known for its stunning landscapes, unique
+                        architecture, and rich history.</p>
                     <h3 class="price">Price : $1300-$1500</h3>
                     <button class="btn">Book Now</button>
                 </div>
@@ -211,9 +208,9 @@
                         </p>
                     </div>
                     <h2 class="heading">Tour To Santorini</h2>
-                    <p class="paragraph">Amet consectetur. Vulputate commodo felis
-                        molestie risus ornare nulla amet et. Libero commodo sagittis dignissim adipiscing quis. Habitant
-                        adipiscing.</p>
+                    <p class="paragraph">Santorini is a beautiful and iconic Greek island located in the southern Aegean
+                        Sea. It is part of the Cyclades archipelago and is known for its stunning landscapes, unique
+                        architecture, and rich history.</p>
                     <h3 class="price">Price : $1300-$1500</h3>
                     <button class="btn">Book Now</button>
                 </div>
@@ -223,17 +220,83 @@
         <div class="popular-tour-section ">
             <div class="popular-content">
                 <h1 class="heading">A Simple Perfect Place <br> To Get Lost</h1>
-                <p class="paragraph">Amet consectetur. Vulputate commodo felis molestie risus ornare nulla amet et.
-                    Libero commodo sagittis dignissim adipiscing quis. </p>
+                <p class="paragraph">
+                    Determining the "perfect" place to travel depends on individual preferences, interests, and the type
+                    of experience you're seeking. Here are a few destinations that are often considered ideal for
+                    different reasons: </p>
                 <ul>
-                    <li>Tempus euismod lacus mauris dignissim quis in ultrices. Magna nullam odio neque diam. Sociis
-                        erat at .</li>
-                    <li>Adipiscing ornare pellentesque mauris volutpat tortor vitae platea porta lacus. Lectus
-                        suspendisse nullam.</li>
+                    <li>Santorini, Greece: Known for its stunning sunsets, unique architecture, and crystal-clear
+                        waters, Santorini is a perfect destination for those seeking romance, beautiful landscapes, and
+                        a mix of relaxation and cultural exploration.</li>
+                    <li>Kyoto, Japan: If you're interested in history, culture, and serene landscapes, Kyoto is a
+                        perfect choice. With its ancient temples, traditional tea houses, and beautiful gardens, Kyoto
+                        offers a glimpse into Japan's rich heritage.</li>
                 </ul>
                 <button class="btn">Read More</button>
             </div>
             <video controls autoplay src="video/waterfall.mp4"></video>
+        </div>
+
+        <div class="stories-section">
+            <h1 class="heading">explore your latest stories</h1>
+            <div class="stories-items">
+                <div class="stories-left">
+                    <div>
+                        <h3>Activities</h3>
+                        <h1 class="heading">8 of the best thing to do in Cairo</h1>
+                        <p class="paragraph">Cairo, the original city that never sleeps, is at the epicenter of
+                            the action in Egypt. Here are the best things to do there</p>
+                    </div>
+                </div>
+                <div class="stories-right">
+                    <div class="story-cards">
+                        <div class="story-card">
+                            <div class="story-img">
+                                <img src="Images/story.jpg" alt="">
+                            </div>
+                            <div>
+                                <h3 class="story-tag">Family Travel</h3>
+                                <h2 class="story-heading">everything you need to know about visiting bordeoux with kids
+                                </h2>
+                                <p class="paragraph">Jan 19, 2024.</p>
+                            </div>
+                        </div>
+                        <div class="story-card">
+                            <div class="story-img">
+                                <img src="Images/story.jpg" alt="">
+                            </div>
+                            <div>
+                                <h3 class="story-tag">Family Travel</h3>
+                                <h2 class="story-heading">everything you need to know about visiting bordeoux with kids
+                                </h2>
+                                <p class="paragraph">Jan 19, 2024.</p>
+                            </div>
+                        </div>
+                        <div class="story-card">
+                            <div class="story-img">
+                                <img src="Images/story.jpg" alt="">
+                            </div>
+                            <div>
+                                <h3 class="story-tag">Family Travel</h3>
+                                <h2 class="story-heading">everything you need to know about visiting bordeoux with kids
+                                </h2>
+                                <p class="paragraph">Jan 19, 2024.</p>
+                            </div>
+                        </div>
+                        <div class="story-card">
+                            <div class="story-img">
+                                <img src="Images/story.jpg" alt="">
+                            </div>
+                            <div>
+                                <h3 class="story-tag">Family Travel</h3>
+                                <h2 class="story-heading">everything you need to know about visiting bordeoux with kids
+                                </h2>
+                                <p class="paragraph">Jan 19, 2024.</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div class="newsletter-section ">
@@ -259,13 +322,13 @@
 
         </div>
     </main>
-    <footer class="">
+    <footer>
         <div class="footer-heading">
             <img src="Images/Group 40071 (2).png" alt="">
             <h1 class="logo-title">Tour <span>Guide</span></h1>
         </div>
-        <p class="paragraph">Lorem ipsum dolor sit amet consectetur. Nulla sit viverra morbi vitae blandit orci potenti
-            vulputate. Leo erat maecenas vitae elementum ultricies nullam. </p>
+        <p class="paragraph">Choosing the best tour depends on your interests, preferences, and the type of experience
+            you're seeking.</p>
         <div class="f-icons">
             <img src="Images/twitter.png" alt="">
             <img src="Images/fb.png" alt="">
